# app/Http/Controllers/UserController.php
@@ -2,12 +2,11 @@
 
 namespace App\Http\Controllers;
 
+use App\Helper\ApiResponse;
+use App\Http\Requests\SetPreferencesRequest;
 use App\Interfaces\UserPreferenceInterface;
-use App\Models\Article;
-use App\Models\UserPreference;
 use Exception;
 use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Validator;
 
 class UserController extends Controller
 {
@@ -18,54 +17,47 @@ class UserController extends Controller
         $this->preferenceRepository = $preferenceRepository;
     }
 
-    public function setPreferences(Request $request)
+    /**
+     * @description insert user preference into repository
+     * @param SetPreferenceRequest $request
+     * @return Illuminate\Http\JsonResponse
+     */
+    public function setPreferences(SetPreferencesRequest $request)
     {
         try {
-            $validator = Validator::make($request->all(), [
-                'sources' => 'array',
-                'sources.*' => 'string',
-                'categories' => 'array',
-                'categories.*' => 'string',
-                'authors' => 'array',
-                'authors.*' => 'string',
-            ]);
-    
-            if ($validator->fails()) {
-                return response()->json($validator->errors(), 422);
-            }
-    
             if (is_null($request->sources) && is_null($request->categories) && is_null($request->authors)) {
-                return response()->json(['message' => 'Please add sources, categories, or authors to add preferences.'], 400);
+                return ApiResponse::error(self::ERROR_STATUS, 'Please add sources, categories, or authors to add preferences.', 400);
             }
     
             $preferences = $this->preferenceRepository->updateOrCreatePreference($request);
             if ($preferences) {
-                return response()->json(['message' => 'Preferences updated successfully']);
+                return ApiResponse::success(self::SUCCESS_STATUS, 'Preferences updated successfully', $preferences, 200);
             }
         } catch (Exception $e) {
-            return response()->json([
-                'error' => 'Something went wrong',
-                'message' => $e->getMessage(),
-            ], 500);
+            logException($e);
+            return ApiResponse::error(self::ERROR_STATUS, $e->getMessage(), 500);
         }
     }
 
+    /**
+     * @description fetch user preferences
+     * @param Request $request
+     * @return Illuminate\Http\JsonResponse
+     */
     public function getPreferences(Request $request)
     {
         try {
             $user = $request->user();
     
             $preferences = $this->preferenceRepository->getPreferences($user->id);
-            return response()->json([
+            return ApiResponse::success(self::SUCCESS_STATUS, 'Preferences fetched successfully', [
                 'sources' => $preferences ? json_decode($preferences->sources) : [],
                 'categories' => $preferences ? json_decode($preferences->categories) : [],
                 'authors' => $preferences ? json_decode($preferences->authors) : [],
-            ]);
+            ], 200);
         } catch (Exception $e) {
-            return response()->json([
-                'error' => 'Something went wrong',
-                'message' => $e->getMessage(),
-            ], 500);
+            logException($e);
+            return ApiResponse::error(self::ERROR_STATUS, $e->getMessage(), 500);
         }
     }
 }
